/** The level of the work hierarchy a file is attached to. */
export type WorkItemKind = 'initiative' | 'epic' | 'story';
